add helper style to set card with blue color variant

--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -41,6 +41,11 @@
     color: #fff;
     border-radius: 10px !important;
 }
+.fm-card-blue{
+    background: #19b5fe;
+    color: #fff;
+    border-radius: 10px !important;
+}
 /**For cards color variant**/
 
 
